openstack: pdns recursor module/profile/role
* This deprecates the needed per host values
  for labservices1002
* use 'secondary' for primary/secondary active/active
  pairs and 'standby' for primary/standby active/standby
  pairs
* couple recursor monitoring with recursor profile

Bug: T171494
Change-Id: I1055766185d5381a666bbd97976e80eb7a681837

--- a/hieradata/eqiad/profile/openstack/main/pdns.yaml
+++ b/hieradata/eqiad/profile/openstack/main/pdns.yaml
@@ -1,3 +1,5 @@
+profile::openstack::main::pdns::tld: 'wmflabs'
+profile::openstack::main::pdns::private_reverse: '68.10.in-addr.arpa'
 profile::openstack::main::pdns::host: 'labs-ns0.wikimedia.org'
 profile::openstack::main::pdns::host_secondary: 'labs-ns1.wikimedia.org'
 profile::openstack::main::pdns::recursor: 'labs-recursor0.wikimedia.org'
