--- a/hieradata/codfw/profile/openstack/labtest/pdns.yaml
+++ b/hieradata/codfw/profile/openstack/labtest/pdns.yaml
@@ -1,3 +1,5 @@
+profile::openstack::labtest::pdns::tld: 'labtest'
+profile::openstack::labtest::pdns::private_reverse: '196.10.in-addr.arpa'
 profile::openstack::labtest::pdns::host: 'labtest-ns0.wikimedia.org'
 profile::openstack::labtest::pdns::host_secondary: 'labtest-ns0.wikimedia.org'
 profile::openstack::labtest::pdns::recursor: 'labtest-recursor0.wikimedia.org'
