maintain-views: Add ip_changes view
Add a new view for all wikis that exposes rows where the IPs have not
been revision deleted (Revision::DELETED_USER).

Bug: T173891
Change-Id: Ia72432daf0c81a9cdf5f5978fe54181ba5dedfe0

--- a/modules/role/templates/labs/db/views/maintain-views.yaml
+++ b/modules/role/templates/labs/db/views/maintain-views.yaml
@@ -246,6 +246,14 @@ customviews:
       gu_hidden, gu_registration, NULL as gu_password_reset_key, NULL as gu_password_reset_expiration,
       NULL as gu_auth_token
     where: gu_hidden=''
+  ip_changes:
+    source:
+      - ip_changes
+      - revision
+    view: >
+      select ipc_rev_id, ipc_rev_timestamp, ipc_hex
+    # 4 == Revision::DELETED_USER
+    where: ipc_rev_id = rev_id AND (rev_deleted & 4) = 0
   ipblocks:
     source: ipblocks
     view: >
