hieradata: force present and empty runcommand.arguments
As it turns out, RunCommand isn't happy when 'arguments' isn't in the config and/or is an empty
list. Apply bandaid for now to allow logstash pool/depool to work as intended.

Bug: T178078
Bug: T178149
Change-Id: Ie1421f671c04e55fad3da4a0a946209a224b8dd1

--- a/hieradata/common/lvs/configuration.yaml
+++ b/hieradata/common/lvs/configuration.yaml
@@ -1181,6 +1181,8 @@ lvs::configuration::lvs_services:
       # Don't monitor, as inbound UDP port only, used by the same process as the tcp listeners
       RunCommand:
         command: /bin/true
+        # https://phabricator.wikimedia.org/T178149
+        arguments: "[ '' ]"
         interval: 60
         timeout: 10
     conftool:
@@ -1278,6 +1280,8 @@ lvs::configuration::lvs_services:
       # Don't monitor, as inbound UDP port only, used by the same process as the tcp listeners
       RunCommand:
         command: /bin/true
+        # https://phabricator.wikimedia.org/T178149
+        arguments: "[ '' ]"
         interval: 60
         timeout: 10
     conftool:
