tox: reorganize tests
Split the apache redirects test from the admin/data.yaml one, and rename
the environments accordingly. Also fix an error in the rakefile.

Bug: T176671
Change-Id: I04af52c20cba068a4f7985b212df3525d686ec75

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 minversion = 1.6
 skipsdist = True
 
-envlist = webperf, commit-message, py27, pep8
+envlist = webperf, commit-message, admin, apache, pep8
 
 [flake8]
 max-line-length = 100
@@ -15,6 +15,8 @@ ignore =
 exclude =
     # Do not lint the tox runtime directory
     .tox,
+    # Do not look in the standard ruby bundle directory
+    .bundle,
     # Ignore user dotfiles and scripts
     modules/admin/files/home,
     # Upstream files that don't pass flake8 but should not be locally modified
@@ -26,12 +28,24 @@ exclude =
     modules/varnish/files/varnishapi.py
 
 [testenv]
+basepython = python2.7
+deps =
+     nose
+
+[testenv:admin]
+basepython = python2.7
 deps =
     nose
     -rmodules/admin/data/requirements.txt
-commands = nosetests modules/admin/data modules/mediawiki/files/apache/sites/redirects
+commands = nosetests modules/admin/data
+
+[testenv:apache]
+commands = nosetests modules/mediawiki/files/apache/sites/redirects
 
 [testenv:webperf]
+deps =
+     nose
+     pyyaml
 commands = nosetests modules/webperf/files
 
 [testenv:commit-message]
