admins: add Cormac Parle to LDAP-only (wmf)
Change-Id: I1517a52a4fa2e02cd6586ca97fad549514e6f314

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2626,6 +2626,10 @@ ldap_only_users:
     ensure: present
     realname: Corey Floyd
     email: cfloyd@wikimedia.org
+  cparle:
+    ensure: present
+    realname: Cormac Parle
+    email: cparle@wikimedia.org
   ferdbold:
     ensure: present
     realname: Frederic Bolduc
