--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2625,6 +2625,10 @@ ldap_only_users:
     ensure: present
     realname: Corey Floyd
     email: cfloyd@wikimedia.org
+  cparle:
+    ensure: present
+    realname: Cormac Parle
+    email: cparle@wikimedia.org
   ferdbold:
     ensure: present
     realname: Frederic Bolduc
