base/icinga: if on labs, don't page for mysql procs
If on labs/labtest hosts, set "is_critical" to false
for mariabd::monitor_process

which means nrpe::monitor_service will be used with "critical => false"

which means monitoring::service will be used with "critical => false"

which means $do_paging will be set to default

which means $real_contact_groups will _not_ have the 'sms' contact group

which means no SMS will be sent to anyone.

Bug: T178008
Bug: T177782
Change-Id: Ia490b4b25285cef912bf84edf9a38a24104ae713

--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -115,15 +115,14 @@ labstore:
 labs:
   __regex: !ruby/regexp /^lab((net|nodepool|mon)100[1-9]\.eqiad\.wmnet|(services|control)100[1-9]\.wikimedia\.org)$/
   cluster: labs
-
+  mariadb::monitor_process::is_critical: false
 labtestvirt:
   __regex: !ruby/regexp /^labtestvirt20[0-9][0-9]\.codfw\.wmnet$/
   cluster: labtestvirt
-
 labtest:
   __regex: !ruby/regexp /^labtest(net200[1-9]\.codfw\.wmnet|(services|control)100[1-9]\.wikimedia\.org)$/
   cluster: labtest
-
+  mariadb::monitor_process::is_critical: false
 swift_be_codfw_dell:
   __regex: !ruby/regexp /^ms-be201[3-5]\.codfw\.wmnet$/
   swift_storage_drives: [
