data services: add amwikimedia to s3
Bug: T176043
Change-Id: Ibf09a33678493dc88d3a00d8a572ffb4f43cf494

--- a/hieradata/common/profile/openstack/base/pdns/labsdb.yaml
+++ b/hieradata/common/profile/openstack/base/pdns/labsdb.yaml
@@ -52,6 +52,7 @@ profile::openstack::base::pdns::labsdb::c3:
   - alswikiquote
   - alswiktionary
   - amwiki
+  - amwikimedia
   - amwikiquote
   - amwiktionary
   - angwiki
