maintain-views: Add log types to logging_whitelist
Add contentmodel, gwtoolset, notifytranslators, pagelang,
pagetranslation, tag, timedmediahandler, translationreview, usermerge
log types to logging_whitelist. Document that spamblacklist, suppress,
and titleblacklist should always be excluded from the allowed set.

Bug: T178052
Change-Id: I5ea33f599b85c9e9c8cf0587b8cc684b6754dacf

--- a/modules/role/templates/labs/db/views/maintain-views.yaml
+++ b/modules/role/templates/labs/db/views/maintain-views.yaml
@@ -143,11 +143,16 @@ fullviews:
   - wbs_propertypairs
   - watchlist_count
 
+# Deliberately excluded:
+# - spamblacklist   T178052
+# - suppress        T178052
+# - titleblacklist  T178052
 logging_whitelist:
   - abusefilter
   - block
   - campus
   - close
+  - contentmodel
   - course
   - delete
   - eparticle
@@ -155,6 +160,7 @@ logging_whitelist:
   - gblblock
   - gblrights
   - globalauth
+  - gwtoolset
   - import
   - institution
   - instructor
@@ -164,7 +170,10 @@ logging_whitelist:
   - merge
   - move
   - newusers
+  - notifytranslators
   - online
+  - pagelang
+  - pagetranslation
   - pagetriage-curation
   - pagetriage-deletion
   - patrol
@@ -174,8 +183,12 @@ logging_whitelist:
   - rights
   - stable
   - student
+  - tag
   - thanks
+  - timedmediahandler
+  - translationreview
   - upload
+  - usermerge
 
 customviews:
   abuse_filter:
