Enable auto submodule updates
Change-Id: I30920fd39ac22767b727460e5f6c2a45ae1f67a7

--- a/project.config
+++ b/project.config
@@ -10,3 +10,7 @@
 [submit]
 	mergeContent = false
 	action = fast forward only
+[allowSuperproject "operations/puppet"]
+	all = refs/heads/master:refs/heads/production
+[subscribe "operations/puppet"]
+	refs = refs/heads/master:refs/heads/production
