[WIP]: Support multiinstance in core servers
First attempt to start working on supporting multiinstance on core
servers
Using db2084 to test it.

Change-Id: I3c2cad302a368a408ffd2bd278c53b9f529b46ec

--- a/hieradata/hosts/db2084.yaml
+++ b/hieradata/hosts/db2084.yaml
@@ -1,2 +1,4 @@
-mariadb::shard: 's5'
-profile::base::notifications_enabled: '0'
+# Buffer pool sizes/instance enabled
+role::mariadb::core_multiinstance::num_instances: 2
+role::mariadb::core_multiinstance::s4: '185G'
+role::mariadb::core_multiinstance::s5: '185G'
