--- a/hieradata/hosts/db2084.yaml
+++ b/hieradata/hosts/db2084.yaml
@@ -1,2 +1,4 @@
-mariadb::shard: 's5'
-profile::base::notifications_enabled: '0'
+# Buffer pool sizes/instance enabled
+role::mariadb::core_multiinstance::num_instances: 2
+role::mariadb::dbstore_multiinstance::s4: '100G'
+role::mariadb::dbstore_multiinstance::s5: '100G'
